#: schema = "https://json.schemastore.org/pyproject.json"

# [build-system]
# requires = ["setuptools>=64.0", "wheel>=0.37.1"]
# build-backend = "setuptools.build_meta"

[project]
name = "tinyaf"
description = "Tiny Web Application Framework. Exactly as simple as practical."
version = "0.1"

[tool.pytest.ini_options]
pythonpath = "src"
